--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "node node_modules/vite/bin/vite.js",
     "build": "vite build",
     "preview": "vite preview",
-    "fetch-publications": "node scripts/fetchPublications.js"
+    "fetch-publications": "node scripts/fetchPublications.js",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://yibeichan.github.io/",
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.5",
     "@fontsource/merriweather": "^5.2.7",
