--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "fetch-publications": "node scripts/fetchPublications.js",
-    "generate-tags": "node scripts/generateTags.js"
+    "generate-tags": "node scripts/generateTags.js",
+    "init-db": "node scripts/initDatabase.js",
+    "migrate-json-to-db": "node scripts/migrateJsonToDb.js"
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.5",
@@ -18,7 +20,9 @@
     "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "sqlite3": "^5.1.6",
+    "better-sqlite3": "^9.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.8",
