--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "node node_modules/vite/bin/vite.js",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "fetch-publications": "node scripts/fetchPublications.js",
@@ -21,8 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "sqlite3": "^5.1.6",
-    "better-sqlite3": "^9.2.2"
+    "@libsql/sqlite3": "^0.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.8",
