--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "node node_modules/vite/bin/vite.js",
     "build": "vite build",
     "preview": "vite preview",
-    "fetch-publications": "node scripts/fetchPublications.js"
+    "fetch-publications": "node scripts/fetchPublications.js",
+    "postbuild": "node scripts/buildSitemap.js"
   },
   "dependencies": {
+    "react-helmet-async": "^1.3.0",
     "@fontsource-variable/inter": "^5.2.5",
     "@fontsource/merriweather": "^5.2.7",
     "@heroicons/react": "^2.0.18",
